feat(s3stream): force split one wal at a time, limit memory consumpti… (#501)
Signed-off-by: Shichao Nie <niesc@automq.com>